--- a/ChangeLog
+++ b/ChangeLog
@@ -2,10 +2,13 @@ Change log for the astng package
 ================================
 
   --
+    * #106191: fix __future__ absolute import w/ From node
     * #50395: fix function fromlineno when some decorator is splited on
       multiple lines (patch by Mark Gius)
     * #92362: fix pyreverse crash on relative import
     * #104041: fix crash 'module object has no file_encoding attribute'
+    * #4294 (pylint-brain): bad inference on mechanize.Browser.open
+    * #46273 (pylint-brain): bad inference subprocess.Popen.communicate
 
 2012-07-18  --  0.24.0
     * include pylint brain extension, describing some stuff not properly understood until then.
