--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Change log for the astng package
   --
 
     * #109562 [jython]: java modules have no __doc__, causing crash
+    * #120646 [py3]: fix for python3.3 _ast changes which may cause crash
     * #109988 [py3]: test fixes
 
 2012-10-05  -- 0.24.1
