--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Change log for the astng package
 
   --
 
+    * pylint-brain: more subprocess.Popen faking (see #46273)
     * #109562 [jython]: java modules have no __doc__, causing crash
     * #120646 [py3]: fix for python3.3 _ast changes which may cause crash
     * #109988 [py3]: test fixes
