--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.24.2-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 26 Feb 2013 23:05:24 +0100
+
 logilab-astng (0.24.1-1) unstable; urgency=low
 
   * new upstream release
