Use correct argument names in the py2stdlib brain urlparse module. Closes #123062
--HG--
branch : stable

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 Change log for the astng package
 ================================
 
-  --
+--
 
+    * #123062 [pylint-brain]: Use correct names for keywords for urlparse
+
+2013-02-27  -- 0.24.2
     * pylint-brain: more subprocess.Popen faking (see #46273)
     * #109562 [jython]: java modules have no __doc__, causing crash
     * #120646 [py3]: fix for python3.3 _ast changes which may cause crash
