Fix inference for generator methods to correctly handle yields in lambdas. Closes #123068
--HG--
branch : stable

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@ Change log for the astng package
 
     * #123062 [pylint-brain]: Use correct names for keywords for urlparse
     * #123056 [pylint-brain]: Add missing methods for hashlib
+    * #123068: Fix inference for generator methods to correctly handle yields
+      in lambdas.
+    * #123068: Make sure .as_string() returns valid code for yields in
+      expressions.
 
 2013-02-27  -- 0.24.2
     * pylint-brain: more subprocess.Popen faking (see #46273)
