Add support for inference of subscript operations on dict literals. Closes #123074
actually fix Dict.getitem and enhance infer_subscript

--HG--
branch : stable

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ Change log for the astng package
     * #123068: Make sure .as_string() returns valid code for yields in
       expressions.
     * #47957: Set literals are now correctly treated as inference leaves.
+    * #123074: Add support for inference of subscript operations on dict 
+      literals.
 
 2013-02-27  -- 0.24.2
     * pylint-brain: more subprocess.Popen faking (see #46273)
