--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.24.3-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 16 Apr 2013 13:06:14 +0200
+
 logilab-astng (0.24.2-1) unstable; urgency=low
 
   * new upstream release
