rename the project astroid
--HG--
extra : rebase_source : 6b4321f694d887ee1b760ea93369f92bd59f55eb
extra : histedit_source : 2215e915da84d31c4d5c75194dd9c992b48b0aa7%2C20f3deeba656b1582943d147af62fd5662e16eeb

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
-Change log for the astng package
-================================
+Change log for the astroid package (used to be astng)
+=====================================================
+
+--
+    * rename the project as astroid
 
 2013-04-16  --  0.24.3
     * #124360 [py3.3]: Don't crash on 'yield from' nodes
