Added the test_utils module for building ASTs and extracting deeply nested nodes for easier testing.
--HG--
extra : rebase_source : 7ad7bcf67246188187a25a39a73d07575d49e1d9

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Change log for the astroid package (used to be astng)
 =====================================================
 
 --
+    * Added the test_utils module for building ASTs and
+      extracting deeply nested nodes for easier testing.
     * rename the project as astroid
 
 2013-04-16  --  0.24.3
