namedtuple support using extended transformation function features. Closes #8766
--HG--
extra : rebase_source : 87e62585e036c3157a716f6e611370b008d36166

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@ Change log for the astroid package (used to be astng)
       `register_transform` function on the manager instead of the 
      `register_transformer` to make it more flexible wrt node selection
 
+    * Use the new transformation API to provide support for namedtuple
+      (actually in pylint-brain, closes #8766)
+
     * Added the test_utils module for building ASTs and
       extracting deeply nested nodes for easier testing.
 
