--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@ Change log for the astroid package (used to be astng)
     * Added the test_utils module for building ASTs and
       extracting deeply nested nodes for easier testing.
 
+    * Add support for py3k's keyword only arguments (PEP 3102)
+
     * rename the project as astroid
 
 2013-04-16  --  0.24.3
