--- a/debian/changelog
+++ b/debian/changelog
@@ -1,326 +1,6 @@
-logilab-astng (0.24.3-1) unstable; urgency=low
+astroid (1.0.0-1) unstable; urgency=low
 
-  * new upstream release
+  * new upstream release, project renamed to astroid instead of logilab-astng
 
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 16 Apr 2013 13:06:14 +0200
-
-logilab-astng (0.24.2-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 26 Feb 2013 23:05:24 +0100
-
-logilab-astng (0.24.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 05 Oct 2012 12:52:08 +0200
-
-logilab-astng (0.24.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 18 Jul 2012 08:16:33 +0200
-
-logilab-astng (0.23.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 08 Dec 2011 15:25:45 +0100
-
-logilab-astng (0.23.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 07 Oct 2011 12:25:22 +0200
-
-logilab-astng (0.22.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 18 Jul 2011 16:00:36 +0200
-
-logilab-astng (0.21.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 11 Jan 2011 15:38:20 +0100
-
-logilab-astng (0.21.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Émile Anclin <emile.anclin@logilab.fr>  Mon, 15 Nov 2010 15:43:29 +0100
-
-logilab-astng (0.20.4-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Emile Anclin <emile.anclin@logilab.fr>  Mon, 27 Oct 2010 11:24:36 +0200
-
-logilab-astng (0.20.3-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 28 Sep 2010 14:30:03 +0200
-
-logilab-astng (0.20.2-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 10 Sep 2010 12:09:54 +0200
-
-logilab-astng (0.20.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 11 May 2010 10:38:59 +0200
-
-logilab-astng (0.20.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Emile Anclin <emile.anclin@logilab.fr>  Mon, 22 Mar 2010 18:24:36 +0100
-
-logilab-astng (0.19.3-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 18 Dec 2009 15:24:36 +0100
-
-logilab-astng (0.19.2-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 18 Dec 2009 11:53:32 +0100
-
-logilab-astng (0.19.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 27 Aug 2009 08:27:33 +0200
-
-logilab-astng (0.19.0-2) unstable; urgency=medium
-
-  [ Sandro Tosi ]
-  * debian/python-logilab-astng.preinst
-    - added to remove leftover files after migration to python-support; thanks
-      to Helmut Grohne and Yaroslav Halchenko for the reports; Closes: #533282,
-      #528458
-  * urgency=medium because it fixes RC bugs 
-  * debian/control
-    - bump Standards-Version 3.8.2 (no changes needed)
-  * debian/copyright
-    - bump upstream copyright years
-    - added packaging copyright for the work I do
-  * debian/control
-    - updated long description to match new upstream one
-    - bump python-logilab-common dependency to at least 0.39.0
-  * debian/rules
-    - using --root instead of --prefix
-
-
-  [ Julien Lavergne ]
-  * debian/{control, rules}
-    - prepare for the upcoming Python 2.6 transition; thanks to Alessio Treglia
-      for the report and patch; Closes: #530607
-      + added versioned depend on python and debhelper to have functions we need
-      + used --install-layout=deb to setup.py install
-      + replaced site-packages by *-packages
-
- -- Sandro Tosi <morph@debian.org>  Thu, 18 Jun 2009 07:14:21 +0200
-
-logilab-astng (0.19.0-1) unstable; urgency=low
-
-  * actually backport Sandro Tosi 0.17.4-2 changes which wasn't in 0.18.0-1
-  * debian/rules: set NO_SETUPTOOLS when calling python setup.py
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 25 Mar 2009 09:31:23 +0100
-
-logilab-astng (0.18.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Emile Anclin <emile.anclin@logilab.fr>  Thu, 19 Mar 2009 15:17:38 +0100
-
-logilab-astng (0.17.4-2) unstable; urgency=low
-
-  * debian/control
-    - added ${misc:Depends} to Depends
-    - tighten the depends on python-logilab-common to the version using
-      python-support (0.38.1-1)
-    - bump Standards-Version to 3.8.1 (no changes needed)
-  * debian/{control, rules}
-    - switch to python-support, implicitly fixing missing namespace; thanks to
-      Servilio Afre Puentes for the report; Closes: #520584
-  * debian/rules
-    - 'build' is a dir, so we need 'rm' for it
-
- -- Sandro Tosi <morph@debian.org>  Sun, 22 Mar 2009 10:19:45 +0100
-
-logilab-astng (0.17.4-1.1) unstable; urgency=low
-
-  * New upstream release
-  * debian/control
-    - adopted under DPMT umbrella (in agreement with Alexandre Fayolle) 
-    - bump Standards-Version to 3.8.0 (no changes needed)
-    - added Vcs-{Svn,Browser} field
-    - little add to short description and empty line at bottom removal
-    - moved python-central to Build-Depends-Indep
-  * debian/copyright
-    - updated copyright years, adding Sylvain as copyright holder
-    - added a clear license section
-    - indented upstream author, copyright holder and license with 4 spaces
-    - update the reference to local license file with GPL-2
-  * debian/rules
-    - install upstream 'Changelog' using dh_installchangelog
-    - added "python setup.py clean"
-    - merged rm into dh_clean call
-    - used '-delete' find option instead of xargs
-    - removed dh_python, dh_link and dh_installman calls
-  * debian/watch
-    - updated to version 3
-    - added opts=pasv for passive ftp
-    - removed options after url
-  * debian/pycompat
-    - removed since not needed anymore
-
- -- Sandro Tosi <morph@debian.org>  Sat, 29 Nov 2008 20:07:01 +0100
-
-logilab-astng (0.17.4-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 19 Nov 2008 15:16:37 +0100
-
-logilab-astng (0.17.3-1) unstable; urgency=low
-
-  * new upstream release
- 
- -- Emile Anclin <emile.anclin@logilab.fr>  Wed, 10 Sep 2008 13:42:06 +0100
-
-logilab-astng (0.17.2-2.1) unstable; urgency=low
-
-  * NMU. Rebuild to move files to /usr/share/pyshared. Closes: #490474.
-
- -- Matthias Klose <doko@debian.org>  Fri, 18 Jul 2008 15:55:34 +0000
-
-logilab-astng (0.17.2-2) unstable; urgency=low
-
-  * Updated standards version (no changes required)
-  * Moved Homepage from description to source package
-  * Upload package to Debian archive
-
- -- Alexandre Fayolle <afayolle@debian.org>  Thu, 14 Feb 2008 15:58:06 +0100
-
-logilab-astng (0.17.2-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <Sylvain.Thenault@logilab.fr>  Mon, 14 Jan 2008 13:32:47 +0100
-
-logilab-astng (0.17.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 07 Jun 2007 16:31:10 +0200
-
-logilab-astng (0.17.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 22 Feb 2007 10:59:44 +0100
-
-logilab-astng (0.16.3-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 23 Nov 2006 16:04:14 +0100
-
-logilab-astng (0.16.2-2) unstable; urgency=low
-
-  * Debian upload
-  * The new release fixes has_dynamic_getattr crash in pylint (closes: #395126)
-  * cleanup upstream source tarball to remove uncleaned debian/ directory
-  * added debian/compat and removed DH_COMPAT from debian/rules to get a proper dh_clean behavior
-
- -- Alexandre Fayolle <afayolle@debian.org>  Tue, 21 Nov 2006 13:50:22 +0100
-
-logilab-astng (0.16.2-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 15 Nov 2006 09:07:01 +0100
-
-logilab-astng (0.16.1-2) unstable; urgency=low
-
-  * bad postinst
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 26 Sep 2006 17:55:38 +0200
-
-logilab-astng (0.16.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 25 Sep 2006 16:42:28 +0200
-
-logilab-astng (0.16.0-2) unstable; urgency=low
-
-  * Updated standards to 3.7.2
-  * use debhelper 5
-  * fixed encoding of maintainer name in debian/control
-  * updated to new python policy (closes: #373458)
-
- -- Alexandre Fayolle <afayolle@debian.org>  Wed, 14 Jun 2006 17:59:54 +0200
-
-logilab-astng (0.16.0-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 19 Apr 2006 17:13:42 +0200
-
-logilab-astng (0.15.1-1) unstable; urgency=low
-
-  * new upstream release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 10 Mar 2006 10:15:49 +0100
-
-logilab-astng (0.15.0-1) unstable; urgency=low
-
-  * new upstream release (closes: #352889)
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon,  6 Mar 2006 09:18:47 +0100
-
-logilab-astng (0.14.0-2) unstable; urgency=low
-
-  * removed packaging bug 
-  * upload to Debian
-
- -- Alexandre Fayolle <afayolle@debian.org>  Fri, 10 Feb 2006 15:29:00 +0100
-
-logilab-astng (0.14.0-1) unstable; urgency=low
-
-  * new upstream support
-  * reorganization to install into site-python, removing the need for 
-    pythonX.X- packages
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 10 Jan 2006 14:18:38 +0100
-
-logilab-astng (0.13.1-2) unstable; urgency=low
-
-  * Dropped python2.2 support, and removed -test package, as suggested by ftpmaster
-
- -- Alexandre Fayolle <afayolle@debian.org>  Mon, 21 Nov 2005 10:14:38 +0100
-
-logilab-astng (0.13.1-1) unstable; urgency=low
-
-  * new upstream release (closes: #337960)
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon,  7 Nov 2005 15:38:42 +0100
-
-logilab-astng (0.13.0-1) unstable; urgency=low
-
-  * initial upstream/debian release
-
- -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 21 Oct 2005 15:51:17 +0200
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 29 Jul 2013 16:32:51 +0200
 
